fix: `stream_from_file` link in tutorial

--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -10,7 +10,7 @@
     "This notebook shows some basic usage of CapyMOA for supervised learning (classification and regression)\n",
     "\n",
     "* There are more detailed notebooks and documentation available, our goal here is just present some high-level functions and demonstrate a subset of CapyMOA's functionalities.\n",
-    "* For simplicity, we simulate data streams in the following examples using datasets and employing synthetic generators. One could also read data directly from a CSV or ARFF (See [stream_from_file](https://capymoa.org/api/stream.html#capymoa.stream.stream_from_file) function)\n",
+    "* For simplicity, we simulate data streams in the following examples using datasets and employing synthetic generators. One could also read data directly from a CSV or ARFF (See [stream_from_file](https://capymoa.org/api/modules/capymoa.stream.html#capymoa.stream.stream_from_file) function)\n",
     "\n",
     "---\n",
     "\n",
