style(automl): fix linting issues in notebook and classifiers

--- a/notebooks/09_automl.ipynb
+++ b/notebooks/09_automl.ipynb
@@ -32,17 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import contextlib, io\n",
-    "import json\n",
-    "\n",
-    "from capymoa.datasets import Electricity\n",
+    "import contextlib\n",
+    "import io\n",
+    "from capymoa.datasets import Electricity, RBFm_100k\n",
     "from capymoa.evaluation import prequential_evaluation\n",
     "from moa.streams import ConceptDriftStream\n",
-    "from capymoa.stream.drift import DriftStream\n",
+    "from capymoa.stream.drift import DriftStream, AbruptDrift, GradualDrift\n",
     "from capymoa.evaluation.visualization import plot_windowed_results\n",
     "from capymoa.classifier import (\n",
     "    HoeffdingTree,\n",
@@ -53,10 +52,7 @@
     "    StreamingRandomPatches,\n",
     "    LeveragingBagging\n",
     ")\n",
-    "from capymoa.datasets import Electricity, RBFm_100k\n",
     "from capymoa.stream.generator import RandomTreeGenerator, SEA\n",
-    "from capymoa.stream.drift import DriftStream, AbruptDrift, GradualDrift\n",
-    "\n",
     "from capymoa.automl import AutoClass, BanditClassifier, SuccessiveHalvingClassifier, EpsilonGreedy\n",
     "\n",
     "# Setup the data streams for our experiments:\n",
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +534,7 @@
     "    # Calculate improvements\n",
     "    improvement_shc = (results_shc_ht.accuracy() - results_default_ht.accuracy())\n",
     "    improvement_bandit = (results_bandit_ht.accuracy() - results_default_ht.accuracy())\n",
-    "    print(f\"Improvement over default parameters:\")\n",
+    "    print(\"Improvement over default parameters:\")\n",
     "    print(f\"SuccessiveHalving: {improvement_shc:.2f}% absolute\")\n",
     "    print(f\"BanditClassifier: {improvement_bandit:.2f}% absolute\")\n",
     "\n",
