--- a/notebooks/06_advanced_API.ipynb
+++ b/notebooks/06_advanced_API.ipynb
@@ -502,7 +502,7 @@
     "# Create a FilterStream and use the NormalisationFilter\n",
     "rbf_stream_normalised = MOAStream(CLI=cli, moa_stream=FilteredStream())\n",
     "\n",
-    "#print(f'MOA creation string for filtered version: {rbf_stream_normalised.moa_stream.getCLICreationString(rbf_stream_normalised.moa_stream.__class__)}')\n",
+    "# print(f'MOA creation string for filtered version: {rbf_stream_normalised.moa_stream.getCLICreationString(rbf_stream_normalised.moa_stream.__class__)}')\n",
     "ob_learner_norm = OnlineBagging(\n",
     "    schema=rbf_stream_normalised.get_schema(), ensemble_size=5\n",
     ")\n",
@@ -513,7 +513,9 @@
     ")\n",
     "ob_results = prequential_evaluation(stream=stream, learner=ob_learner)\n",
     "\n",
-    "print(f\"\\tAccuracy with online normalisation: {ob_results_norm['cumulative'].accuracy()}\")\n",
+    "print(\n",
+    "    f\"\\tAccuracy with online normalisation: {ob_results_norm['cumulative'].accuracy()}\"\n",
+    ")\n",
     "print(f\"\\tAccuracy without normalisation: {ob_results['cumulative'].accuracy()}\")"
    ]
   },
@@ -606,6 +608,7 @@
     "from moa.classifiers.trees import HoeffdingTree\n",
     "from collections import Counter\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "class CustomOnlineBagging(Classifier):\n",
     "    def __init__(\n",
@@ -815,6 +818,7 @@
     "# Get cpu device for training.\n",
     "device = \"cpu\"\n",
     "\n",
+    "\n",
     "# Define model\n",
     "class NeuralNetwork(nn.Module):\n",
     "    def __init__(self, input_size=0, number_of_classes=0):\n",
@@ -832,6 +836,7 @@
     "        x = self.flatten(x)\n",
     "        logits = self.linear_relu_stack(x)\n",
     "        return logits\n",
+    "\n",
     "\n",
     "class PyTorchClassifier(Classifier):\n",
     "    def __init__(\n",
