add conditional for mock datasets

--- a/notebooks/06_advanced_API.ipynb
+++ b/notebooks/06_advanced_API.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
    "metadata": {
     "ExecuteTime": {
@@ -494,7 +494,7 @@
     "\n",
     "stream = Electricity()\n",
     "cli = (\n",
-    "    f\"-s (ArffFileStream -f {get_download_dir() / 'electricity.arff'}) \"\n",
+    "    f\"-s (ArffFileStream -f {get_download_dir() / f'electricity{'_tiny' if is_nb_fast() else ''}.arff'}) \"\n",
     "    f\"-f NormalisationFilter\"\n",
     ")\n",
     "print(cli)\n",
