--- a/notebooks/06_advanced_API.ipynb
+++ b/notebooks/06_advanced_API.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
    "metadata": {
     "ExecuteTime": {
@@ -493,10 +493,8 @@
     "from moa.streams import FilteredStream\n",
     "\n",
     "stream = Electricity()\n",
-    "cli = (\n",
-    "    f\"-s (ArffFileStream -f {get_download_dir() / f'electricity{'_tiny' if is_nb_fast() else ''}.arff'}) \"\n",
-    "    f\"-f NormalisationFilter\"\n",
-    ")\n",
+    "elec_file = f\"electricity{'_tiny' if is_nb_fast() else ''}.arff\"\n",
+    "cli = f\"-s (ArffFileStream -f {get_download_dir() / elec_file}) -f NormalisationFilter\"\n",
     "print(cli)\n",
     "\n",
     "# Create a FilterStream and use the NormalisationFilter\n",
