fix: fix issue with csv stream

--- a/notebooks/drift_detection.ipynb
+++ b/notebooks/drift_detection.ipynb
@@ -335,7 +335,7 @@
    "source": [
     "i = 0\n",
     "loss_values = []\n",
-    "while stream.has_more_instances and i < 5000:\n",
+    "while stream.has_more_instances() and i < 5000:\n",
     "    i += 1\n",
     "    instance = stream.next_instance()\n",
     "    detector.add_element(instance)\n",
