--- a/notebooks/09_automl.ipynb
+++ b/notebooks/09_automl.ipynb
@@ -431,7 +431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
