--- a/notebooks/10_ocl.ipynb
+++ b/notebooks/10_ocl.ipynb
@@ -514,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capymoa",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -528,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
