--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -8,11 +8,11 @@
    "source": [
     "# Semi-supervised Learning\n",
     "\n",
-    "* Preparing and executing partially and delayed labeling experiments\n",
+    "* Preparing and executing partially and delayed labeling experiments.\n",
     "\n",
     "---\n",
     "\n",
-    "*More information about CapyMOA can be found in* https://www.capymoa.org\n",
+    "*More information about CapyMOA can be found in* https://www.capymoa.org.\n",
     "\n",
     "**notebook last updated on 20/10/2025**"
    ]
@@ -377,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
