--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -606,7 +606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
