--- a/notebooks/drift_detection.ipynb
+++ b/notebooks/drift_detection.ipynb
@@ -474,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
