--- a/notebooks/save_and_load_model.ipynb
+++ b/notebooks/save_and_load_model.ipynb
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capymoa",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
